@@ -1,3 +1,4 @@
+2351 [Preset Exporter] fixed not exporting the AviSynth preset included in a OneClick preset. Bug #719
 2350 [OneClick] fixed wrong stream order in some TS files. Bug #718
 2349 [x264] fixed max values for --crf and --qp
 2348 [x264] vbv enhancements
